plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.18' // Java 11 지원 마지막 2.x 버전
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'junit:junit:4.13.1'
    compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'// redis 역직렬화 하기 위한 의존성 추가.
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
	implementation 'com.google.code.gson:gson'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
// Firebase Admin SDK
	implementation 'com.google.firebase:firebase-admin:9.2.0' // 최신 버전 확인 필요
	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.2.2' //http에 요청을 편하기 보내기 위함.
	testImplementation 'org.mockito:mockito-inline:5.2.0' // 또는 최신 버전


}

test {
	useJUnitPlatform() // ✅ 반드시 필요 (JUnit5일 경우)
}

tasks.named('test') {
	useJUnitPlatform()
}
